# CNNs

./: CMakeLists.txt  FCC.cpp  FCC.h  Filter.cpp  Filter.h  Filter_ensemble.cpp  Filter_ensemble.h  Filter_layer.cpp  Filter_layer.h  Matrix_computations.cpp  Matrix_computations.h  README.md  Trainer.cpp  Trainer.h  extract_images.h  image_label_pair.cpp  image_label_pair.h  image_processing.cpp  image_processing.h  main.cpp  max_pooling.cpp  max_pooling.h  output_layer.cpp  output_layer.h
Tools/: FCC.cpp  FCC.h  Filter.cpp  Filter.h  Filter_Operations.cpp  Filter_Operations.h  Filter_ensemble.cpp  Filter_ensemble.h  Filter_layer.cpp  Filter_layer.h  Matrix_computations.cpp  Matrix_computations.h  Save_load_image_label_pairs.cpp  Save_load_image_label_pairs.h  Trainer.cpp  Trainer.h  extract_images.cpp  image_processing.cpp  max_pooling.cpp  max_pooling.h  output_layer.cpp  output_layer.h
examples/: Backward_step_testing.cpp  Forward_step_testing.cpp  Fun.cpp  Test_Convolution_Backpropagation.cpp  Tim.cpp  Tim.h  simple_test.cpp  xor_Problem.cpp
functions/: MSE.cpp  MSE.h  ReLu.cpp  ReLu.h  cross_entropy.cpp  cross_entropy.h  sigmoid.cpp  sigmoid.h  softmax.cpp  softmax.h
saved_image_label_pairs/: .txt  coozu.txt
